# rs-stm32f1xx_template

./: Cargo.toml  Embed.toml  README.md  deploy.sh  main.hex  openocd.cfg
.cargo/: config.toml
examples/: blinks.rs  embed.rs
src/: main.rs
