[package]
name = "stm32rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"] }
cortex-m = "^0.7.7"                                                              # Access to the generic ARM peripherals
# cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3" # Startup code for the ARM Core
# cortex-m-rtic = "1.1.3"
nb = "1"
embedded-hal = "1.0.0"         # Access to generic embedded functions (`set_high`)
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
panic-halt = "^0.2.0"
# panic-probe = { version = "0.3.2", features = ["print-defmt"] }
# rtt-target = { version = "0.5.0", features = [] }  # critical-section-*
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
# defmt = "0.3.*"                                                               # 是一种高效的日志记录框架
# defmt-rtt = "*"
## 一些其他库
# st7735-lcd = "0.9.0" # 请使用0.9.0
# embedded-graphics = "0.8.1"
# embedded-picofont = "0.2.1"
# tinybmp = "0.5.0"
# heapless = "0.8.0"
# numtoa = "0.2.4"
# aht10={version = "*"}
# aht10-embedded = "0.0.1"
# embedded-alloc ={version = "0.5.1"}

# [dependencies.stm32f1xx-hal]
# version = "0.10.0"
# features = ["rt", "stm32f103", "medium"]
